Fix design overflow issue

--- a/kuicsboard/board/static/app.css
+++ b/kuicsboard/board/static/app.css
@@ -51,3 +51,7 @@ div.hello {
 .content {
     word-wrap: break-word;
 }
+
+.media-content {
+    max-width: 100%;
+}
